--- a/FYP/Views/Shared/_Layout.cshtml
+++ b/FYP/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <title>@ViewData["Title"] - StudentConnect</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/StudentConnect.styles.css" asp-append-version="true" />
+    
     <link href="~/css/pagedlist.css" rel="stylesheet" />
     <script src="~/jquery/jquery.min.js"></script>
   
@@ -45,7 +45,7 @@
                             <a class="nav-link text-white btn btn-outline-light bg-black bg-opacity-50" asp-area="" asp-controller="Administration" asp-action="RolesList">RolesList</a>
                         </li>
                         <li class="nav-item mx-2 bg-black bg-opacity-50">
-                            <a class="nav-link text-white btn btn-outline-light @(Accessor.HttpContext.Request.Path.Value == "/news&events" ? "btn-primary" : "")" asp-area="" asp-controller="Administration" asp-action="CreateRoles">Create Roles</a>
+                            <a class="nav-link text-white btn btn-outline-light @(Accessor.HttpContext.Request.Path.Value == "/news&events" ? "btn-primary" : "")" asp-area="" asp-controller="Dashboard" asp-action="Discussion">Create Roles</a>
                         </li>
                         <li class="nav-item mx-2 bg-black bg-opacity-50">
                             <a class="nav-link text-white btn btn-outline-light" asp-area="" asp-page="/Privacy">Send Email</a>
